<resources>
    <string name="app_name">Tu Alcancia</string>

    //Login View

    <string name="login_email">Email</string>
    <string name="login_password">Contraseña</string>
    <string name="login_confirm_password">Confirmar Contraseña</string>
    <string name="login_sign_in">Ingresar</string>
    <string name="login_sign_up">Regístrate</string>
    <string name="login_reset_password">Restablecer mi contraseña</string>
    <string name="login_sign_in_google">Ingresar con Google</string>
    <string name="login_forgot_password">Olvidé mi contraseña</string>
    <string name="login_create_account">Crear una nueva cuenta</string>
    <string name="login_go_login">Regresar al inicio de sesión</string>


    //Botton Navigation Menu

    <string name="options_menu_log_out">Cerrar sesión</string>
    <string name="add_alcancia">Agregar Valor</string>
    <string name="diez_mil">Diez Mil</string>
    <string name="diez">10000</string>
    <string name="veinte_mil">Veinte Mil</string>
    <string name="veinte">20000</string>
    <string name="cincuenta_mil">Cincuenta mil</string>
    <string name="cincuenta">50000</string>
    <string name="cien">100000</string>
    <string name="empty_not_saved">No se guardo el valor</string>
    <string name="ahorro">Total Ahorrado</string>
    <string name="dinero">Dinero</string>
    <string name="romper_alcancia">Romper Alcancia</string>
    <string name="rompe_alcancia">Haz roto la alcancia!!!</string>


</resources>
