<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_billetes"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:visibility="visible">

        <ImageButton
            android:id="@+id/diez_mil"
            android:layout_width="331dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_billete"
            android:contentDescription="@string/diez_mil"
            android:tag="@string/diez"
            app:srcCompat="@drawable/diez_mil" />

        <ImageButton
            android:id="@+id/veinte_mil"
            android:layout_width="331dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_billete"
            android:contentDescription="@string/veinte_mil"
            android:tag="@string/veinte"
            app:srcCompat="@drawable/veinte_mil" />

        <ImageButton
            android:id="@+id/cincuenta_mil"
            android:layout_width="331dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_billete"
            android:contentDescription="@string/cincuenta_mil"
            android:tag="@string/cincuenta"
            app:srcCompat="@drawable/cincuenta_mil" />

        <ImageButton
            android:id="@+id/cien_mil"
            android:layout_width="331dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_billete"
            android:contentDescription="@string/cien"
            android:tag="@string/cien"
            app:srcCompat="@drawable/cien_mil" />


    </LinearLayout>
</ScrollView>
